Added support for Resumable upload for media and added Admin settings feature for Apps API